# Axiome

./: .gitignore  LICENSE  README.md
.github/: CONTRIBUTING.md
.github/workflows/: ci-cd.yml  cla-check.yml  dependency-updates.yml  release.yml
backend/: README.md  pyproject.toml  requirements.txt
backend/axiome_backend/: __init__.py  main.py
backend/axiome_backend/firstprinciples_backend/: README.md  app.py
backend/axiome_backend/firstprinciples_backend/api/routes/: concepts.py
backend/axiome_backend/firstprinciples_backend/core/: config.py
backend/tests/: test_example.py
docs/: CLA.md  INTERN_CLA_INSTRUCTIONS.md  README.md  axiome.md
docs/requirements/: PRD.md
frontend/: README.md  package-lock.json  package.json
frontend/firstprinciples_frontend/: jest.config.js  package-lock.json  package.json
frontend/firstprinciples_frontend/src/: excalidrawWrapper.tsx
frontend/firstprinciples_frontend/src/app/: page.test.tsx  page.tsx
frontend/firstprinciples_frontend/src/components/: AdjacencyList.tsx  ConceptInterface.tsx  Header.tsx  MermaidEditor.test.tsx  MermaidEditor.tsx  TextInterface.tsx  excalidrawWrapper.test.tsx  excalidrawWrapper.tsx
scripts/: README.md  check-branch.sh
